Added core features and break iterator tokenizer

--- a/project/build.properties
+++ b/project/build.properties
@@ -1,6 +1,6 @@
 #Project properties
 #Sun Feb 27 13:58:04 CET 2011
-project.organization=Jens Haase
+project.organization=jenshaase
 project.name=uimaScala
 sbt.version=0.7.4
 project.version=0.1
