Stopword tagger checks now with lower case

--- a/project/build.properties
+++ b/project/build.properties
@@ -1,5 +1,5 @@
 #Project properties
-#Sun Feb 27 13:58:04 CET 2011
+#Wed Apr 27 21:21:38 CEST 2011
 project.organization=jenshaase
 project.name=uimaScala
 sbt.version=0.7.4
