Updated to xsbt and scala 2.9.0-1

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,22 @@ project/boot/
 *.ipr
 *.iws
 /.idea
+
+# Eclipse
+*.pydevproject
+.project
+.metadata
+bin/**
+tmp/**
+tmp/**/*
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.classpath
+.settings/
+.loadpath
+
+# CDT-specific
+.cproject
